--- a/theme_starter/index.html
+++ b/theme_starter/index.html
@@ -7,14 +7,98 @@
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
   <link type="text/css" rel="stylesheet" href="css/main.css" />
-
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Custom Materialize Theme</title>
 </head>
 
 <body>
-  <h1>Theme Starter</h1>
+  <div class="navbar-fixed">
+    <nav class="teal">
+      <div class="container">
+        <div class="nav-wrapper">
+          <a href="#home" class="brand-logo">Travelville</a>
+          <a href="#" data-activates="mobile-nav" class="button-collapse">
+            <i class="material-icons">menu</i>
+          </a>
+          <ul class="right hide-on-med-and-down">
+            <li>
+              <a href="#home">Home</a>
+            </li>
+            <li>
+              <a href="#search">Search</a>
+            </li>
+            <li>
+              <a href="#popular">Popular Places</a>
+            </li>
+            <li>
+              <a href="#gallary">Gallary</a>
+            </li>
+            <li>
+              <a href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <ul id="mobile-nav" class="side-nav">
+    <li>
+      <a href="#home">Home</a>
+    </li>
+    <li>
+      <a href="#search">Search</a>
+    </li>
+    <li>
+      <a href="#popular">Popular Places</a>
+    </li>
+    <li>
+      <a href="#gallary">Gallary</a>
+    </li>
+    <li>
+      <a href="#contact">Contact</a>
+    </li>
+  </ul>
+
+  <!--Section : slider-->
+
+  <section class="slider">
+    <ul class="slides">
+      <li>
+        <img src="img/resort1.jpg" alt="">
+        <div class="caption center-align">
+          <h2>TAKE YOUR DREAM VACATION</h2>
+          <h5 class="light grey-text text-lighten-4 hide-on-small-only">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore sequi blanditiis consequuntur, temporibus
+            pariatur.
+          </h5>
+          <a class="btn btn-large">Learn More</a>
+        </div>
+      </li>
+      <li>
+        <img src="img/resort2.jpg" alt="">
+        <div class="caption left-align">
+          <h2>We Work with All Budgets</h2>
+          <h5 class="light grey-text text-lighten-4 hide-on-small-only">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore sequi blanditiis consequuntur, temporibus
+            pariatur.
+          </h5>
+          <a class="btn btn-large">Learn More</a>
+        </div>
+      </li>
+      <li>
+        <img src="img/resort3.jpg" alt="">
+        <div class="caption right-align">
+          <h2>Group and individuel Packages</h2>
+          <h5 class="light grey-text text-lighten-4 hide-on-small-only">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore sequi blanditiis consequuntur, temporibus
+            pariatur.
+          </h5>
+          <a class="btn btn-large">Learn More</a>
+        </div>
+      </li>
+    </ul>
+  </section>
+
+
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -22,7 +106,16 @@
   <script>
     $(document).ready(function () {
       // Custom JS & jQuery here
-      
+      //Init side-Na
+      $('.button-collapse').sideNav();
+
+      //Init slider
+      $('.slider').slider({
+        indicators: false,
+        height: 500,
+        transition: 500,
+        interval: 6000,
+      })
     });
   </script>
 </body>
