--- a/theme_starter/index.html
+++ b/theme_starter/index.html
@@ -97,27 +97,90 @@
       </li>
     </ul>
   </section>
+  <!--Search sectition-->
+  <section class="section section-search teal darken-1 white-text center">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <h3>Search Destination</h3>
+          <div class="input-field">
+            <input class="white grey-text autocomplete" placeholder="Chicago, New york, Tel Aviv" type="text" id="autocomplete-input">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!--Section for Icon Boxes-->
 
+  <section class="section section-icons grey lighten-4 center">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="material-icons large teal-text">room</i>
+            <h4>Pick Where</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, voluptates!</p>
 
-  <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      // Custom JS & jQuery here
-      //Init side-Na
-      $('.button-collapse').sideNav();
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="material-icons large teal-text">store</i>
+            <h4>Travel shop</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, voluptates!</p>
 
-      //Init slider
-      $('.slider').slider({
-        indicators: false,
-        height: 500,
-        transition: 500,
-        interval: 6000,
-      })
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="material-icons large teal-text">airplanemode_active</i>
+            <h4>Fly Cheap</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, voluptates!</p>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+</body>
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script>
+  $(document).ready(function () {
+    // Custom JS & jQuery here
+    //Init side-Na
+    $('.button-collapse').sideNav();
+
+    //Init slider
+    $('.slider').slider({
+      indicators: false,
+      height: 500,
+      transition: 500,
+      interval: 6000,
     });
-  </script>
+    //Autocomplete
+
+    $('.autocomplete').autocomplete({
+      data: {
+        "Aruba": null,
+        "Cancun": null,
+        "Hawaii": null,
+        "Florida": null,
+        "California": null,
+        "Jamaica": null,
+        "Europe": null,
+        "The Bahamas": null,
+        "Chicago": null,
+        "New York": null,
+        "Tel Aviv": null,
+      }
+    })
+
+  });
+</script>
 </body>
 
 </html>
