--- a/theme_starter/index.html
+++ b/theme_starter/index.html
@@ -60,9 +60,7 @@
       <a href="#contact">Contact</a>
     </li>
   </ul>
-
   <!--Section : slider-->
-
   <section class="slider">
     <ul class="slides">
       <li>
@@ -110,9 +108,7 @@
       </div>
     </div>
   </section>
-
   <!--Section for Icon Boxes-->
-
   <section class="section section-icons grey lighten-4 center">
     <div class="container">
       <div class="row">
@@ -121,7 +117,6 @@
             <i class="material-icons large teal-text">room</i>
             <h4>Pick Where</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, voluptates!</p>
-
           </div>
         </div>
         <div class="col s12 m4">
@@ -129,7 +124,6 @@
             <i class="material-icons large teal-text">store</i>
             <h4>Travel shop</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, voluptates!</p>
-
           </div>
         </div>
         <div class="col s12 m4">
@@ -137,13 +131,191 @@
             <i class="material-icons large teal-text">airplanemode_active</i>
             <h4>Fly Cheap</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, voluptates!</p>
-
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--Section: Popular-->
+  <section class="section section-popular">
+    <div class="container">
+      <div class="row">
+        <h4 class="center">
+          <span class="teal-text">Popular</span> Places</h4>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/resort1.jpg" alt="">
+              <span class="card-title">Cancun, Mexico</span>
+            </div>
+            <div class="card-content">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque architecto voluptas sit velit vero consequatur?</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/resort2.jpg" alt="">
+              <span class="card-title">The Bahamas</span>
+            </div>
+            <div class="card-content">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque architecto voluptas sit velit vero consequatur?</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/resort3.jpg" alt="">
+              <span class="card-title">Nova Scotia</span>
+            </div>
+            <div class="card-content">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque architecto voluptas sit velit vero consequatur?</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 center">
+          <a href="#contact" class="btn btn-large grey darken-3">
+            <i class="material-icons left">send</i>Contact for Booking
+          </a>
+        </div>
+      </div>
+  </section>
+  <!--Section: follow-->
+  <section class="section section-follow teal darken-2 white-text">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 center">
+          <h4>Follow Travelville</h4>
+          <p>Follow us on social media for special offers</p>
+          <a href="https://facebook.com" target="_blank" class="white-text">
+            <i class="fab fa-facebook fa-4x"></i>
+          </a>
+          <a href="https://twitter.com" target="_blank" class="white-text">
+            <i class="fab fa-twitter fa-4x"></i>
+          </a>
+          <a href="https://linkedin.com" target="_blank" class="white-text">
+            <i class="fab fa-linkedin fa-4x"></i>
+          </a>
+          <a href="https://googleplus.com" target="_blank" class="white-text">
+            <i class="fab fa-google-plus fa-4x"></i>
+          </a>
+          <a href="https://pinterest.com" target="_blank" class="white-text">
+            <i class="fab fa-pinterest fa-4x"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--Section gallery-->
+  <section class="section section-gallery">
+    <div class="container">
+      <h4 class="center">
+        <span class="teal-text">Photo</span> Gallary
+      </h4>
+      <div class="row">
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?beach" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?travel" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?nature" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?beach,travel" alt="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?beachs" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?traveling" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?bridge" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?beach,travel,boat" alt="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?water" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?trees" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?cruise" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?beach,nightlife" alt="">
         </div>
       </div>
 
     </div>
+    </div>
   </section>
+  <!--Contact-->
+  <section class="section section-contact">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card-panel teal white-text center">
+            <i class="material-icons medium">email</i>
+            <h5>Contact us for booking</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, illum! Impedit in, explicabo voluptatem dolorum
+              id facere. Impedit, dolores ducimus.</p>
+          </div>
+          <ul class="collection with-header">
+            <li class="collection-header">
+              <h4>Location</h4>
+            </li>
+            <li class="collection-item">Travelville Agency</li>
+            <li class="collection-item">555 Beach RD</li>
+            <li class="collection-item">Miami Florida 55555</li>
+            <li class="collection-item">Travelville Agency</li>
+          </ul>
+        </div>
+        <div class="col s12 m6">
+          <div class="card-panel grey lighten-3">
+            <h5>Please fill out this form</h5>
+            <div class="input-field">
+              <input type="text" placeholder="name" id="name">
+              <label for="name">Name</label>
+            </div>
+            <div class="input-field">
+              <input type="email" placeholder="email" id="email">
+              <label for="email">Email</label>
+            </div>
+            <div class="input-field">
+              <input type="text" placeholder="phone" id="phone">
+              <label for="phone">Phone</label>
+            </div>
+            <div class="input-field">
+              <textarea class="materialize-textarea" placeholder="Enter Message" id="message"></textarea>
+              <label for="message">Your Message Here</label>
+            </div>
+            <input type="submit" value="Submit" class="btn">
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
+  <footer class="section teal darken=-2 white-text center">
+    <p class="flow-text">Travelville &copy; 2018</p>
+  </footer>
 </body>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -153,16 +325,14 @@
     // Custom JS & jQuery here
     //Init side-Na
     $('.button-collapse').sideNav();
-
     //Init slider
     $('.slider').slider({
       indicators: false,
       height: 500,
-      transition: 500,
-      interval: 6000,
+      transition: 100,
+      interval: 1000,
     });
     //Autocomplete
-
     $('.autocomplete').autocomplete({
       data: {
         "Aruba": null,
@@ -178,7 +348,6 @@
         "Tel Aviv": null,
       }
     })
-
   });
 </script>
 </body>
