--- a/theme_starter/index.html
+++ b/theme_starter/index.html
@@ -13,7 +13,7 @@
   <title>Custom Materialize Theme</title>
 </head>
 
-<body>
+<body id="home" class="scrollspy">
   <div class="navbar-fixed">
     <nav class="teal">
       <div class="container">
@@ -33,7 +33,7 @@
               <a href="#popular">Popular Places</a>
             </li>
             <li>
-              <a href="#gallary">Gallary</a>
+              <a href="#gallery">Gallery</a>
             </li>
             <li>
               <a href="#contact">Contact</a>
@@ -54,7 +54,7 @@
       <a href="#popular">Popular Places</a>
     </li>
     <li>
-      <a href="#gallary">Gallary</a>
+      <a href="#gallery">Gallery</a>
     </li>
     <li>
       <a href="#contact">Contact</a>
@@ -96,7 +96,7 @@
     </ul>
   </section>
   <!--Search sectition-->
-  <section class="section section-search teal darken-1 white-text center">
+  <section id="search" class="section section-search teal darken-1 white-text center scrollspy">
     <div class="container">
       <div class="row">
         <div class="col s12">
@@ -137,7 +137,7 @@
     </div>
   </section>
   <!--Section: Popular-->
-  <section class="section section-popular">
+  <section id="popular" class="section section-popular scrollspy">
     <div class="container">
       <div class="row">
         <h4 class="center">
@@ -211,10 +211,10 @@
     </div>
   </section>
   <!--Section gallery-->
-  <section class="section section-gallery">
+  <section id="gallery" class="section section-gallery scrollspy">
     <div class="container">
       <h4 class="center">
-        <span class="teal-text">Photo</span> Gallary
+        <span class="teal-text">Photo</span> Gallery
       </h4>
       <div class="row">
         <div class="col s12 m3">
@@ -263,7 +263,7 @@
     </div>
   </section>
   <!--Contact-->
-  <section class="section section-contact">
+  <section id="contact" class="section section-contact scrollspy">
     <div class="container">
       <div class="row">
         <div class="col s12 m6">
@@ -347,7 +347,9 @@
         "New York": null,
         "Tel Aviv": null,
       }
-    })
+    });
+    //Init Scrollspy
+    $('.scrollspy').scrollSpy();
   });
 </script>
 </body>
