--- a/theme_starter/index.html
+++ b/theme_starter/index.html
@@ -218,13 +218,13 @@
       </h4>
       <div class="row">
         <div class="col s12 m3">
-          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?beach" alt="">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?turtles" alt="">
         </div>
         <div class="col s12 m3">
-          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?travel" alt="">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?dogs" alt="">
         </div>
         <div class="col s12 m3">
-          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?nature" alt="">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?space" alt="">
         </div>
         <div class="col s12 m3">
           <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900?beach,travel" alt="">
@@ -329,8 +329,8 @@
     $('.slider').slider({
       indicators: false,
       height: 500,
-      transition: 100,
-      interval: 1000,
+      transition: 1000,
+      interval: 3000,
     });
     //Autocomplete
     $('.autocomplete').autocomplete({
