--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="css/main.css" />
+  <link type="text/css" rel="stylesheet" href="styles/css/main.min.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="styles/css/main.css" />
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -64,7 +64,7 @@
   <section class="slider">
     <ul class="slides">
       <li>
-        <img src="img/resort1.jpg" alt="">
+        <img src="styles/img/resort1.jpg" alt="">
         <div class="caption center-align">
           <h2>TAKE YOUR DREAM VACATION</h2>
           <h5 class="light grey-text text-lighten-4 hide-on-small-only">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore sequi blanditiis consequuntur, temporibus
@@ -74,7 +74,7 @@
         </div>
       </li>
       <li>
-        <img src="img/resort2.jpg" alt="">
+        <img src="styles/img/resort2.jpg" alt="">
         <div class="caption left-align">
           <h2>We Work with All Budgets</h2>
           <h5 class="light grey-text text-lighten-4 hide-on-small-only">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore sequi blanditiis consequuntur, temporibus
@@ -84,7 +84,7 @@
         </div>
       </li>
       <li>
-        <img src="img/resort3.jpg" alt="">
+        <img src="styles/img/resort3.jpg" alt="">
         <div class="caption right-align">
           <h2>Group and individuel Packages</h2>
           <h5 class="light grey-text text-lighten-4 hide-on-small-only">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempore sequi blanditiis consequuntur, temporibus
@@ -145,7 +145,7 @@
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="img/resort1.jpg" alt="">
+              <img src="styles/img/resort1.jpg" alt="">
               <span class="card-title">Cancun, Mexico</span>
             </div>
             <div class="card-content">
@@ -156,7 +156,7 @@
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="img/resort2.jpg" alt="">
+              <img src="styles/img/resort2.jpg" alt="">
               <span class="card-title">The Bahamas</span>
             </div>
             <div class="card-content">
@@ -167,7 +167,7 @@
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="img/resort3.jpg" alt="">
+              <img src="styles/img/resort3.jpg" alt="">
               <span class="card-title">Nova Scotia</span>
             </div>
             <div class="card-content">
@@ -317,9 +317,9 @@
     <p class="flow-text">Travelville &copy; 2018</p>
   </footer>
 </body>
-<!--Import jQuery before materialize.js-->
+<!--Import jQuery before materialize.scripts-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="scripts/materialize.min.js"></script>
 <script>
   $(document).ready(function () {
     // Custom JS & jQuery here
